--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -311,7 +311,7 @@ much better hope of finding someone who deserves your friendship.\inouter{e}
 
 Now suppose you're afraid of conventional standards and the stigma that
 will come to you if people find out about this. Well, it stands to
-reason that a lover---thinking that everyone else will admire him for
+reason that a lover---thinking that everyone\inouter{232} else will admire him for
 his success as much as he admires himself---will fly
 into words and proudly declare to all and sundry that his labors were
 not in vain. Someone who does not love you, on the other hand, can
@@ -320,7 +320,7 @@ glory that comes from popular reputation.
 
 Besides, it's inevitable that a lover will be found out: many people
 will see that he devotes his life to following the boy he loves. The
-result is that whenever people see you talking with him they'll
+result is that whenever people see you talking with him\inouter{b} they'll
 think you are spending time together just before or just after giving
 way to desire. But they won't even begin to find fault with people for
 spending time together if they are not lovers; they know one has to talk
@@ -328,7 +328,7 @@ to someone, either out of friendship or to obtain some other pleasure.
 
 Another point: have you been alarmed by the thought that it is hard for
 friendships to last? Or that when people break up, it's ordinarily just 
-as awful for one side as it is for the other, but when you've
+as awful for one side as it is for the other,\inouter{c} but when you've
 given up what is most important to you already, then your loss is
 greater than his? If so, it would make more sense for you to be afraid
 of lovers. For a lover is easily annoyed, and whatever happens, he'll
@@ -336,7 +336,7 @@ think it was designed to hurt him. That is why a lover prevents the boy
 he loves from spending time with other people. He's afraid that wealthy
 men will outshine him with their money, while men of education will turn
 out to have the advantage of greater intelligence. And he watches like a
-hawk everyone who may have any other advantage over him! Once
+hawk everyone who may have any other advantage over him!\inouter{d} Once
 he's persuaded you to turn those people away, he'll have you completely
 isolated from friends; and if you show more sense than he does in
 looking after your own interests, you'll come to quarrel with him.
@@ -345,14 +345,14 @@ But if a man really does not love you, if it is only because of his
 excellence that he got what he asked for, then he won't be jealous of
 the people who spend time with you. Quite the contrary! He'll hate
 anyone who does not want to be with you; he'll think they look down on
-him while those who spend time with you do him good; so you
+him while those who spend time with you do\inouter{e} him good; so you
 should expect friendship, rather than enmity, to result from this
 affair.
 
 Another point: lovers generally start to desire your body before they
 know your character or have any experience of your other traits, with
 the result that even they can't tell whether they'll still want to be
-friends with you after their desire has passed.
+friends with you after their desire has passed.\inouter{233}
 Non-lovers, on the other hand, are friends with you even before they
 achieve their goal, and you've no reason to expect that benefits
 received will ever detract from their friendship for you. No, those
@@ -361,7 +361,7 @@ things will stand as reminders of more to come.
 Another point: you can expect to become a better person if you are won
 over by me, rather than by a lover. A lover will praise what you say and
 what you do far beyond what is best, partly because he is afraid of 
-being disliked, and partly because desire has impaired his
+being disliked, and partly because desire\inouter{b} has impaired his
 judgment. Here is how love draws conclusions: When a lover suffers a
 reverse that would cause no pain to anyone else, love makes him think
 he's accursed! And when he has a stroke of luck that's not worth a
@@ -370,7 +370,7 @@ you should feel sorry for lovers, not admire them.
 
 If my argument wins you over, I will, first of all, give you my time
 with no thought of immediate pleasure; I will plan instead for the
-benefits that are to come, since I am master of myself and have
+benefits that are to come, since I am master\inouter{c} of myself and have
 not been overwhelmed by love. Small problems will not make me very
 hostile, and big ones will make me only gradually, and only a little,
 angry. I will forgive you for unintentional errors and do my best to
@@ -378,7 +378,7 @@ keep you from going wrong intentionally. All this, you see, is the proof
 of a friendship that will last a long time.
 
 Have you been thinking that there can be no strong friendship in the
-absence of erotic love? Then you ought to remember that we would not 
+absence of erotic love? Then you\inouter{d} ought to remember that we would not 
 care so much about our children if that were so, or about our
 fathers and mothers. And we wouldn't have had any trustworthy friends,
 since those relationships did not come from such a desire but from doing
@@ -387,7 +387,7 @@ quite different things.
 Besides, if it were true that we ought to give the biggest favor to
 those who need it most, then we should all be helping out the very
 poorest people, not the best ones, because people we've saved from the
-worst troubles will give us the most thanks. For instance, the right
+worst troubles will give us the most\inouter{e} thanks. For instance, the right
 people to invite to a dinner party would be beggars and people
 who need to sate their hunger, because they're the ones who'll be fond
 of us, follow us, knock on our
@@ -396,14 +396,14 @@ ancient Greek literature of a lovesick man pursuing his prey.} take the most
 pleasure with the deepest gratitude, and pray for our success. No, it's
 proper, I suppose, to grant your favors to those who are best able to
 return them, not to those in the direst need---that is, not to those who
-merely desire the thing, but to those who really deserve
+merely desire the thing,\inouter{234} but to those who really deserve
 it---not to people who will take pleasure in the bloom of your youth,
 but to those who will share their goods with you when you are older; not
 to people who achieve their goal and then boast about it in public, but
 to those who will keep a modest silence with everyone; not to people
 whose devotion is short-lived, but to those who will be steady friends
 their whole lives; not to the people who look for an excuse to quarrel
-as soon as their desire has passed, but to those who will prove 
+as soon as their desire has passed,\inouter{b} but to those who will prove 
 their worth when the bloom of your youth has faded. Now, remember what I
 said and keep this in mind: friends often criticize a lover for bad
 behavior; but no one close to a non-lover ever thinks that desire has
@@ -411,7 +411,7 @@ led him into bad judgment about his interests.
 
 And now I suppose you'll ask me whether I'm urging you to give your
 favors to everyone who is not in love with you. No. As I see it, a lover
-would not ask you to give in to all your lovers either. You would not,
+would not ask you to give in to all\inouter{c} your lovers either. You would not,
 in that case, earn as much gratitude from each recipient, and
 you would not be able to keep one affair secret from the others in the
 same way. But this sort of thing is not supposed to cause any harm, and
@@ -423,7 +423,7 @@ more, if you think I have passed over something, just ask.”
 How does the speech strike you, Socrates? Don't you think it's simply
 superb, especially in its choice of words?
 
-\saysocrates It's a miracle, my friend; I'm in ecstasy. And it's all your 
+\saysocrates It's a miracle,\inouter{d} my friend; I'm in ecstasy. And it's all your 
 doing, Phaedrus: I was looking at you while you were reading and
 it seemed to me the speech had made you radiant with delight; and since
 I believe you understand these matters better than I do, I followed your
@@ -433,7 +433,7 @@ lead, and following you I shared your Bacchic frenzy.
 
 \saysocrates Do you really think I am joking, that I am not serious?
 
-\sayphaedrus You are not at all serious, Socrates. But now tell me
+\sayphaedrus You are\inouter{e} not at all serious, Socrates. But now tell me
 the truth, in the name of Zeus, god of friendship: Do you think that any
 other Greek could say anything more impressive or more complete on this
 same subject?
@@ -442,7 +442,7 @@ same subject?
 author has said what the situation demanded, and not instead simply on
 the ground that he has spoken in a clear and concise manner, with a
 precise turn of phrase? If we must, I will have to go along for your
-sake, since---surely because I am so ignorant---that
+sake, since---surely because I am so ignorant---that\inouter{235}
 passed me by. I paid attention only to the speech's style. As to the
 other part, I wouldn't even think that Lysias himself could be satisfied
 with it. For it seemed to me, Phaedrus---unless, of course, you
