--- a/projects/mc/mc-environment.tex
+++ b/projects/mc/mc-environment.tex
@@ -6,7 +6,7 @@
 
 \setupbodyfont[etbb,11pt]
 
-\definebodyfontenvironment[11pt][interlinespace=14.4pt]
+\definebodyfontenvironment[11pt][interlinespace=15pt]
 
 %\definefont[chaptertitlefont][SerifCaps at 18pt][14.4pt]
 
@@ -47,13 +47,13 @@
     leftmargin=0pt,
     leftmargindistance=0pt,
     width=4in,
-    rightmargin=1in,
-    rightmargindistance=6pt,
+    rightmargin=64pt,
+    rightmargindistance=16pt,
 ]
 
 \setuppagenumbering[alternative=doublesided, location=,]
 
-\setupmargindata[location=outer,style={\switchtobodyfont[small]\it}]
+\setupmargindata[location=outer,style={\it}]
 
 %%
 %% P A R A G R A P H
