--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -75,7 +75,7 @@ working to attain it.}
 {\em J.M.C.}\par
 \blank[line]
 
-\saysocrates Phaedrus, my friend! Where have you been? And where are\inouter{227} you 
+\saysocrates Phaedrus, my friend!\inouter{227} Where have you been? And where are you 
 going?
 
 \sayphaedrus I was with Lysias, the son of Cephalus,\endnote{Cephalus is prominent in the opening section of Plato\symbol[rightquote]s {\em Republic}, which is set in his home in Piraeus, the port of Athens. His sons Lysias, Polemarchus, and Euthydemus were known for their democratic sympathies.} Socrates, and I am going for a walk outside the city walls because I was with him for a long time, sitting there the whole morning. You see, I'm keeping in
