--- a/projects/mc/rawcontent/symposiumfootnotes.tex
+++ b/projects/mc/rawcontent/symposiumfootnotes.tex
@@ -1,1 +1,226 @@
-.
+\goto{1}[symposium.htmlux5cux23sympossup_1]. Agathon's name could be
+translated “Goodman.” The proverb is, “Good men go uninvited to an
+inferior man's feast” (Eupolis fr. 289 Kock).
+
+\goto{2}[symposium.htmlux5cux23sympossup_2]. Menelaus calls on Agamemnon
+at {\em Iliad} ii.408. Menelaus is called a limp spearman at
+xvii.587--88.
+
+\goto{3}[symposium.htmlux5cux23sympossup_3]. An allusion to {\em Iliad}
+x.224, “When two go together, one has an idea before the other.”
+
+\goto{4}[symposium.htmlux5cux23sympossup_4]. Dionysus was the god of
+wine and drunkenness.
+
+\goto{5}[symposium.htmlux5cux23sympossup_5]. {\em Theogony} 116--120,
+118 omitted.
+
+\goto{6}[symposium.htmlux5cux23sympossup_6]. Acusilaus was an
+early-fifth-century writer of genealogies.
+
+\goto{7}[symposium.htmlux5cux23sympossup_7]. Parmenides, B 13
+Diels-Kranz.
+
+\goto{8}[symposium.htmlux5cux23sympossup_8]. Accepting the deletion of
+{\em ē} in e5.
+
+\goto{9}[symposium.htmlux5cux23sympossup_9]. Cf. {\em Iliad} x.482,
+xv.262; {\em Odyssey} ix.381.
+
+\goto{10}[symposium.htmlux5cux23sympossup_10]. Alcestis was the
+self-sacrificing wife of Admetus, whom Apollo gave a chance to live if
+anyone would go to Hades in his place.
+
+\goto{11}[symposium.htmlux5cux23sympossup_11]. Orpheus was a musician of
+legendary powers, who charmed his way into the underworld in search of
+his dead wife, Eurydice.
+
+\goto{12}[symposium.htmlux5cux23sympossup_12]. In his play, {\em The
+Myrmidons}. In Homer there is no hint of sexual attachment between
+Achilles and Patroclus.
+
+\goto{13}[symposium.htmlux5cux23sympossup_13]. Harmodius and Aristogiton
+attempted to overthrow the tyrant Hippias in 514 B.C. Although their
+attempt failed, the tyranny fell three years later, and the lovers were
+celebrated as tyrannicides.
+
+\goto{14}[symposium.htmlux5cux23sympossup_14]. {\em Iliad} ii.71.
+
+\goto{15}[symposium.htmlux5cux23sympossup_15]. Heraclitus of Ephesus, a
+philosopher of the early fifth century, was known for his enigmatic
+sayings. This one is quoted elsewhere in a slightly different form, frg.
+B 51 Diels-Kranz.
+
+\goto{16}[symposium.htmlux5cux23sympossup_16]. {\em Iliad} v.385,
+{\em Odyssey} xi.305 ff.
+
+\goto{17}[symposium.htmlux5cux23sympossup_17]. Cf. {\em Odyssey}
+viii.266 ff.
+
+\goto{18}[symposium.htmlux5cux23sympossup_18]. Arcadia included the city
+of Mantinea, which opposed Sparta, and was rewarded by having its
+population divided and dispersed in 385 B.C. Aristophanes seems to be
+referring anachronistically to those events; such anachronisms are not
+uncommon in Plato.
+
+\goto{19}[symposium.htmlux5cux23sympossup_19]. Contrast 178b.
+
+\goto{20}[symposium.htmlux5cux23sympossup_20]. {\em Iliad} xix.92--93.
+“Mischief” translates {\em Atē}.
+
+\goto{21}[symposium.htmlux5cux23sympossup_21]. “Moral character”:
+{\em aretē}, i.e., virtue.
+
+\goto{22}[symposium.htmlux5cux23sympossup_22]. A proverbial expression
+attributed by Aristotle ({\em Rhetoric} 1406a17--23) to the
+fourth-century liberal thinker and rhetorician Alcidamas.
+
+\goto{23}[symposium.htmlux5cux23sympossup_23]. {\em Sōphrosunē}. The
+word can be translated also as “temperance” and, most literally,
+“sound-mindedness.” (Plato and Aristotle generally contrast
+{\em sōphrosunē} as a virtue with self-control: the person with
+{\em sōphrosunē} is naturally well-tempered in every way and so does not
+need to control himself, or hold himself back.)
+
+\goto{24}[symposium.htmlux5cux23sympossup_24]. From Sophocles, fragment
+234b Dindorf: “Even Ares cannot withstand Necessity.” Ares is the god of
+war.
+
+\goto{25}[symposium.htmlux5cux23sympossup_25]. See {\em Odyssey}
+viii.266--366. Aphrodite's husband Hephaestus made a snare that caught
+Ares in bed with Aphrodite.
+
+\goto{26}[symposium.htmlux5cux23sympossup_26]. “Wisdom” translates
+{\em sophia}, which Agathon treats as roughly equivalent to {\em technē}
+(professional skill); he refers mainly to the ability to produce things.
+Accordingly “wisdom” translates {\em sophia} in the first instance;
+afterwards in this passage it is “skill” or “art.”
+
+\goto{27}[symposium.htmlux5cux23sympossup_27]. At 186b.
+
+\goto{28}[symposium.htmlux5cux23sympossup_28]. Euripides,
+{\em Stheneboea} (frg. 666 Nauck).
+
+\goto{29}[symposium.htmlux5cux23sympossup_29]. After these two lines of
+poetry, Agathon continues with an extremely poetical prose peroration.
+
+\goto{30}[symposium.htmlux5cux23sympossup_30]. Accepting the emendation
+{\em aganos} at d5.
+
+\goto{31}[symposium.htmlux5cux23sympossup_31]. “Gorgian head” is a pun
+on “Gorgon's head.” In his peroration Agathon had spoken in the style of
+Gorgias, and this style was considered to be irresistibly powerful. The
+sight of a Gorgon's head would turn a man to stone.
+
+\goto{32}[symposium.htmlux5cux23sympossup_32]. The allusion is to
+Euripides, {\em Hippolytus} 612.
+
+\goto{33}[symposium.htmlux5cux23sympossup_33]. Cf. 197b.
+
+\goto{34}[symposium.htmlux5cux23sympossup_34]. 197b3--5.
+
+\goto{35}[symposium.htmlux5cux23sympossup_35]. The Greek is ambiguous
+between “Love loves beautiful things” and “Love is one of the beautiful
+things.” Agathon had asserted the former (197b5, 201a5), and this will
+be a premise in Diotima's argument, but he asserted the latter as well
+(195a7), and this is what Diotima proceeds to refute.
+
+\goto{36}[symposium.htmlux5cux23sympossup_36]. {\em Poros} means “way,”
+“resource.” His mother's name, {\em Mētis}, means “cunning.” {\em Penia}
+means “poverty.”
+
+\goto{37}[symposium.htmlux5cux23sympossup_37]. I.e., a philosopher.
+
+\goto{38}[symposium.htmlux5cux23sympossup_38]. {\em Eudaimonia}: no
+English word catches the full range of this term, which is used for the
+whole of well-being and the good, flourishing life.
+
+\goto{39}[symposium.htmlux5cux23sympossup_39]. “Poetry” translates
+{\em poiēsis}, lit. ‘making', which can be used for any kind of
+production or creation. However, the word {\em poiētēs}, lit. ‘maker',
+was used mainly for poets---writers of metrical verses that were
+actually set to music.
+
+\goto{40}[symposium.htmlux5cux23sympossup_40]. Accepting the emendation
+{\em toutou} in b1.
+
+\goto{41}[symposium.htmlux5cux23sympossup_41]. The preposition is
+ambiguous between “within” and “in the presence of.” Diotima may mean
+that the lover causes the newborn (which may be an idea) to come to be
+within a beautiful person; or she may mean that he is stimulated to give
+birth to it in the presence of a beautiful person.
+
+\goto{42}[symposium.htmlux5cux23sympossup_42]. Moira is known mainly as
+a Fate, but she was also a birth goddess ({\em Iliad} xxiv.209), and was
+identified with the birth-goddess Eilithuia (Pindar, {\em Olympian Odes}
+vi.42, {\em Nemean} {\em Odes} vii.1).
+
+\goto{43}[symposium.htmlux5cux23sympossup_43]. Codrus was the legendary
+last king of Athens. He gave his life to satisfy a prophecy that
+promised victory to Athens and salvation from the invading Dorians if
+their king was killed by the enemy.
+
+\goto{44}[symposium.htmlux5cux23sympossup_44]. Lycurgus was supposed to
+have been the founder of the oligarchic laws and stern customs of
+Sparta.
+
+\goto{45}[symposium.htmlux5cux23sympossup_45]. The leader: Love.
+
+\goto{46}[symposium.htmlux5cux23sympossup_46]. I.e., philosophy.
+
+\goto{47}[symposium.htmlux5cux23sympossup_47]. Reading {\em teleutēsēi}
+at c7.
+
+\goto{48}[symposium.htmlux5cux23sympossup_48]. Cf. 205d--e.
+
+\goto{49}[symposium.htmlux5cux23sympossup_49]. {\em Iliad} xi.514.
+
+\goto{50}[symposium.htmlux5cux23sympossup_50]. This is the conventional
+translation of the word, but the {\em aulos} was in fact a reed
+instrument and not a flute. It was held by the ancients to be the
+instrument that most strongly arouses the emotions.
+
+\goto{51}[symposium.htmlux5cux23sympossup_51]. Satyrs had the sexual
+appetites and manners of wild beasts and were usually portrayed with
+large erections. Sometimes they had horses' tails or ears, sometimes the
+traits of goats. Marsyas, in myth, dared to compete in music with Apollo
+and was skinned alive for his impudence.
+
+\goto{52}[symposium.htmlux5cux23sympossup_52]. Olympus was a legendary
+musician who was said to be loved by Marsyas ({\em Minos} 318b5) and to
+have made music that moved its listeners out of their senses.
+
+\goto{53}[symposium.htmlux5cux23sympossup_53]. Legendary worshippers of
+Cybele, who brought about their own derangement through music and dance.
+
+\goto{54}[symposium.htmlux5cux23sympossup_54]. {\em Iliad} vi.232--36
+tells the famous story of the exchange by Glaucus of golden armor for
+bronze.
+
+\goto{55}[symposium.htmlux5cux23sympossup_55]. Ajax, a hero of the Greek
+army at Troy, carried an enormous shield and so was virtually
+invulnerable to enemy weapons.
+
+\goto{56}[symposium.htmlux5cux23sympossup_56]. Potidaea, a city in
+Thrace allied to Athens, was induced by Corinth to revolt in 432 B.C.
+The city was besieged by the Athenians and eventually defeated in a
+bloody local war, 432--430 B.C.
+
+\goto{57}[symposium.htmlux5cux23sympossup_57]. {\em Odyssey} iv.242,
+271.
+
+\goto{58}[symposium.htmlux5cux23sympossup_58]. At Delium, a town on the
+Boeotian coastline just north of Attica, a major Athenian expeditionary
+force was routed by a Boeotian army in 424 B.C. For another description
+of Socrates' action during the retreat, see {\em Laches} 181b.
+
+\goto{59}[symposium.htmlux5cux23sympossup_59]. Cf. Aristophanes,
+{\em Clouds} 362.
+
+\goto{60}[symposium.htmlux5cux23sympossup_60]. Brasidas, among the most
+effective Spartan generals during the Peloponnesian War, was mortally
+wounded while defeating the Athenians at Amphipolis in 422 B.C. Antenor
+(for the Trojans) and Nestor (for the Greeks) were legendary wise
+counsellors during the Trojan War.
+
+\goto{61}[symposium.htmlux5cux23sympossup_61]. Cf. {\em Iliad} xvii.32.
