--- a/projects/mc/mc.tex
+++ b/projects/mc/mc.tex
@@ -11,6 +11,7 @@
 
     \startbodymatter
         \input rawcontent/phaedrussay
+        \input rawcontent/rawsymposium
     \stopbodymatter
 \stoptext
 
