--- a/projects/mc/mc-environment.tex
+++ b/projects/mc/mc-environment.tex
@@ -25,7 +25,7 @@
 
 \definepapersize[mypage][width=6in, height=9in]
 
-\setuppapersize[mypage][mypage] % [typeset page] on [paper size].
+\setuppapersize[mypage][A4] % [typeset page] on [paper size].
 %\setuparranging[2SIDE]
 
 %%
