--- a/projects/mc/rawcontent/phaedrussay.tex
+++ b/projects/mc/rawcontent/phaedrussay.tex
@@ -1466,14 +1466,14 @@ engenders in a friend’s soul is widely praised\inouter{257} as virtue, it toss
 soul around for nine thousand years on the earth and
 leads it, mindless, beneath it.
 
-“So now, dear Love, this is the best and most beautiful
+So now, dear Love, this is the best and most beautiful
 palinode we could
 offer as payment for our debt, especially in view of the rather poetical
 choice of words Phaedrus made me
 use. Forgive us our
 earlier speeches in return for this one; be kind and gracious toward my
 expertise at love, which is your own gift to me: do not, out of anger,
-take it away or disable it; and grant that I may be held in higher
+take it away or disable it; and grant that I may be held in higher\inouter{b}
 esteem than ever by those who are beautiful. If Phaedrus and I
 said anything that shocked you in our earlier speech, blame it on
 Lysias, who was its father, and put a stop to his making speeches of
@@ -1481,7 +1481,7 @@ this sort; convert him to philosophy like his brother Polemarchus so
 that his lover here may no longer play both sides as he does now, but
 simply devote his life to Love through philosophical discussions.”
 
-\sayphaedrus I join you in your prayer, Socrates. If this is really
+\sayphaedrus I\inouter{c} join you in your prayer, Socrates. If this is really
 best for us, may it come to pass. As to your speech, I admired it from
 the moment you began: You managed it much better than your first one.
 I’m afraid that Lysias’ effort to match it is bound to fall flat, if of
@@ -1491,7 +1491,7 @@ task for just that reason: All through his invective, he kept calling
 him a “speech writer.” So perhaps his pride will keep him from writing
 this speech for us.
 
-\saysocrates Ah, what a foolish thing to say, young man. How wrong
+\saysocrates Ah\inouter{d}, what a foolish thing to say, young man. How wrong
 you are about your friend: he can’t be intimidated so easily! But
 perhaps you thought the man who was taking him to task meant what he
 said as a reproach?
@@ -1502,7 +1502,7 @@ ashamed to compose speeches or leave any writings behind; they are
 afraid that in later times they may come to be known as “sophists.”
 
 \saysocrates Phaedrus, you don’t understand the expression “Pleasant 
-Bend”---it originally referred to the long bend of the
+Bend”---it originally referred to the long\inouter{e} bend of the
 Nile.\endnote{Apparently this was a
 familiar example of something named by language that means the
 opposite---though called “pleasant” it was really a long, nasty bend.} And, besides the
@@ -1513,7 +1513,7 @@ that they add at the beginning a list of its admirers everywhere.
 
 \sayphaedrus What do you mean? I don’t understand.
 
-\saysocrates Don’t you know that the first thing
+\saysocrates Don’t\inouter{258} you know that the first thing
 politicians put in their
 writings is the names
 of their admirers?
@@ -1531,7 +1531,7 @@ does he go on with what he has to say, showing off his wisdom to his
 admirers, often composing a very long document. Do you think there’s any
 difference between that and a written speech?
 
-\sayphaedrus No, I don’t.
+\sayphaedrus No\inouter{b}, I don’t.
 
 \saysocrates Well, then, if it remains on the books, he is delighted and
 leaves the stage a poet. But if it is struck down, if he fails as a
@@ -1545,7 +1545,7 @@ the contrary, they are in awe of it.
 
 \sayphaedrus Quite so.
 
-\saysocrates There’s this too. What of an orator or a king who acquires 
+\saysocrates There’s\inouter{c} this too. What of an orator or a king who acquires 
 enough power to match Lycurgus, Solon, or Darius as a
 lawgiver\endnote{Lycurgus was the legendary
 lawgiver of Sparta. Solon reformed the constitution of Athens in the
@@ -1566,7 +1566,7 @@ being a writer?
 \sayphaedrus It certainly isn’t likely in view of what you said, for he
 would probably be reproaching his own ambition as well.
 
-\saysocrates This, then, is quite clear: Writing speeches is not in itself
+\saysocrates This\inouter{d}, then, is quite clear: Writing speeches is not in itself
 a shameful thing.
 
 \sayphaedrus How could it be?
@@ -1581,19 +1581,19 @@ this question of Lysias or anyone else who ever did or will write
 anything---whether a public or a private document, poetic verse or plain
 prose?
 
-\sayphaedrus You ask if we need to? Why else should one live, I say, if 
+\sayphaedrus You\inouter{e} ask if we need to? Why else should one live, I say, if 
 not for pleasures of this sort? Certainly not for those you
 cannot feel unless you are first in pain, like most of the pleasures of
 the body, and which for this reason we call the pleasures of slaves.
 
 \saysocrates It seems we clearly have the time. Besides, I think that the
-cicadas, who are singing and carrying on conversations with one another 
+cicadas, who are singing and carrying on\inouter{259} conversations with one another 
 in the heat of the day above our heads, are also
 watching us. And if they saw the two of us avoiding conversation at
 midday like most people, diverted by their song and, sluggish of mind,
 nodding off, they would have every right to laugh at us, convinced that
 a pair of slaves had come to their resting place to sleep like sheep
-gathering around the spring in the afternoon. But if they see us in
+gathering around the spring in the afternoon. But if they see us in\inouter{b}
 conversation, steadfastly navigating around them as if they were
 the Sirens, they will be very pleased and immediately give us the gift
 from the gods they are able to give to mortals.
@@ -1604,14 +1604,14 @@ from the gods they are able to give to mortals.
 story goes that the cicadas used to be human beings who lived before the
 birth of the Muses. When the Muses were born and song was created for
 the first time, some of the people of that time were so overwhelmed 
-with the pleasure of singing that they forgot to eat or drink;
+with the pleasure of singing that they\inouter{c} forgot to eat or drink;
 so they died without even realizing it. It is from them that the race of
 the cicadas came into being; and, as a gift from the Muses, they have no
 need of nourishment once they are born. Instead, they immediately burst
 into song, without food or drink, until it is time for them to die.
 After they die, they go to the Muses and tell each one of them which
 mortals have honored her. To Terpsichore they report those who
-have honored her by their devotion to the dance and thus make them
+have\inouter{d} honored her by their devotion to the dance and thus make them
 dearer to her. To Erato, they report those who honored her by dedicating
 themselves to the affairs of love, and so too with the other Muses,
 according to the activity that honors each. And to Calliope, the oldest
@@ -1625,7 +1625,7 @@ afternoon in sleep.
 
 \sayphaedrus By all means, let’s talk.
 
-\saysocrates Well, then, we ought to examine the topic we proposed
+\saysocrates Well\inouter{e}, then, we ought to examine the topic we proposed
 just now: When is a speech well written and delivered, and when is it
 not?
 
@@ -1635,7 +1635,7 @@ not?
 mind the truth about the subject he is going to discuss?
 
 \sayphaedrus What I have actually heard about this, Socrates, my friend, 
-is that it is not necessary for the intending orator to
+is that it is not necessary for the\inouter{260} intending orator to
 learn what is really just, but only what will seem just to the crowd who
 will act as judges. Nor again what is really good or noble, but only
 what will seem so. For that is what persuasion proceeds from, not truth.
@@ -1651,7 +1651,7 @@ particular, must not be dismissed.
 
 \sayphaedrus How?
 
-\saysocrates Suppose I were trying to convince you that you should
+\saysocrates Suppose\inouter{b} I were trying to convince you that you should
 fight your enemies on horseback, and neither one of us knew what a horse
 is, but I happened to know this much about you, that Phaedrus believes a
 horse is the tame animal with the longest ears---
@@ -1663,7 +1663,7 @@ convince you, having composed a speech in praise of the donkey in which
 I called it a horse and claimed that having such an animal is of immense
 value both at home and in military service, that it is good for fighting
 and for carrying your baggage and that it is useful for much else
-besides---
+besides---\inouter{c}
 
 \sayphaedrus Well, that would be totally ridiculous.
 
@@ -1676,7 +1676,7 @@ clever and an enemy?
 addresses a city which knows no better and attempts to sway it, not
 praising a miserable donkey as if it were a horse, but bad as if it were
 good, and, having studied what the people believe, persuades them to do
-something bad instead of good---with that as its seed, what sort of crop 
+something bad instead of good---with\inouter{d} that as its seed, what sort of crop 
 do you think rhetoric can harvest?
 
 \sayphaedrus A crop of really poor quality.
@@ -1689,7 +1689,7 @@ it is worth, is to take me up only after mastering the truth. But I do
 make this boast: even someone who knows the truth couldn’t produce
 conviction on the basis of a systematic art without me.”
 
-\sayphaedrus Well, is that a fair reply?
+\sayphaedrus Well\inouter{e}, is that a fair reply?
 
 \saysocrates Yes, it is---if, that is, the arguments now advancing upon
 rhetoric testify that it is an art. For it seems to me as if I hear
@@ -1700,7 +1700,7 @@ rhetoric as not an art, see {\em Gorgias} 462b--c.} As the
 Spartan said, there is no genuine art of speaking without a grasp of
 truth, and there never will be.
 
-\sayphaedrus We need to hear these arguments, Socrates. Come, produce
+\sayphaedrus We\inouter{261} need to hear these arguments, Socrates. Come, produce
 them, and examine them: What is their point? How do they
 make it?
 
@@ -1716,7 +1716,7 @@ speech on any subject either. And let Phaedrus be the one to answer.
 \saysocrates Well, then, isn’t the rhetorical art, taken as a whole, a way
 of directing the soul by means of speech, not only in the lawcourts and
 on other public occasions but also in private? Isn’t it one and the same
-art whether its subject is great or small, and no more to be held in
+art whether its subject is great or small\inouter{b}, and no more to be held in
 esteem---if it is followed correctly---when its questions are
 serious than when they are trivial? Or what have you heard about all
 this?
@@ -1732,7 +1732,7 @@ Palamedes?\endnote{Nestor and Odysseus are
 Homeric heroes known for their speaking ability. Palamedes, who does not
 figure in Homer, was proverbial for his cunning.}
 
-\sayphaedrus No, by Zeus, I haven’t even heard of Nestor’s---unless
+\sayphaedrus No\inouter{c}, by Zeus, I haven’t even heard of Nestor’s---unless
 by Nestor you mean Gorgias, and by Odysseus, Thrasymachus or
 Theodorus.\endnote{Gorgias of Leontini was
 the most famous teacher of rhetoric to visit Athens. About Thrasymachus
@@ -1751,7 +1751,7 @@ speak on opposite sides? What else can we call what they do?
 
 \sayphaedrus Yes.
 
-\saysocrates And won’t whoever does this artfully make the same
+\saysocrates And\inouter{d} won’t whoever does this artfully make the same
 thing appear to the same people sometimes just and sometimes, when he
 prefers, unjust?
 
@@ -1773,7 +1773,7 @@ motion.}
 \sayphaedrus Most certainly.
 
 \saysocrates We can therefore find the practice of speaking on opposite
-sides not only in the lawcourts and in the Assembly. Rather, it
+sides not only in the lawcourts\inouter{e} and in the Assembly. Rather, it
 seems that one single art---if, of course, it is an art in the first
 place---governs all speaking. By means of it one can make out as similar
 anything that can be so assimilated, to everything to which it can be
@@ -1786,7 +1786,7 @@ what he is doing.
 is deception most likely to occur---regarding things that differ much or
 things that differ little from one another?
 
-\sayphaedrus Regarding those that differ little.
+\sayphaedrus Regarding\inouter{262} those that differ little.
 
 \saysocrates At any rate, you are more likely to escape detection, as you
 shift from one thing to its opposite, if you proceed in small steps
@@ -1804,7 +1804,7 @@ are similar and dissimilar to one another.
 each thing truly is to detect a similarity---whether large or
 small---between something he doesn’t know and anything else?
 
-\sayphaedrus That is impossible.
+\sayphaedrus That\inouter{b} is impossible.
 
 \saysocrates Clearly, therefore, the state of being deceived and holding
 beliefs contrary to what is the case comes upon people by reason of
@@ -1819,7 +1819,7 @@ escape this being done to himself?
 
 \sayphaedrus Never.
 
-\saysocrates Therefore, my friend, the art of a speaker who doesn’t know 
+\saysocrates Therefore\inouter{c}, my friend, the art of a speaker who doesn’t know 
 the truth and chases opinions instead is likely to be a
 ridiculous thing---not an art at all!
 
@@ -1833,7 +1833,7 @@ speeches?
 talking quite abstractly, without enough examples.
 
 \saysocrates In fact, by some chance the two speeches do, as it seems,
-contain an example of the way in which someone who knows the truth 
+contain an example of the way in which\inouter{d} someone who knows the truth 
 can toy with his audience and mislead them. For my part,
 Phaedrus, I hold the local gods responsible for this---also, perhaps,
 the messengers of the Muses who are singing over our heads may have
@@ -1844,7 +1844,7 @@ speaking.
 
 \saysocrates Come, then---read me the beginning of Lysias’ speech.
 
-\sayphaedrus “You understand my situation: I’ve told you how good it 
+\sayphaedrus “You\inouter{e} understand my situation: I’ve told you how good it 
 would be for us, in my opinion, if we could work this out. In
 any case, I don’t think I should lose the chance to get what I am asking
 for, merely because I don’t happen to be in love with you. A man in love
@@ -1853,7 +1853,7 @@ will wish he had not done you any favors---”
 \saysocrates Stop. Our task is to say how he fails and writes artlessly.
 Right?
 
-\sayphaedrus Yes.
+\sayphaedrus Yes\inouter{263}.
 
 \saysocrates Now isn’t this much absolutely clear: We are in accord with
 one another about some of the things we discourse about and in discord
@@ -1873,7 +1873,7 @@ and even with ourselves?
 
 \sayphaedrus We certainly do.
 
-\saysocrates Therefore, we agree about the former and disagree
+\saysocrates Therefore\inouter{b}, we agree about the former and disagree
 about the latter.
 
 \sayphaedrus Right.
@@ -1888,7 +1888,7 @@ must first make a systematic division and grasp the particular character
 of each of these two kinds of thing, both the kind where most people
 wander in different directions and the kind where they do not.
 
-\sayphaedrus What a splendid thing, Socrates, he will have
+\sayphaedrus What\inouter{c} a splendid thing, Socrates, he will have
 understood if he grasps {\em that!}
 
 \saysocrates Second, I think, he must not be mistaken about his subject; he
